[gd_scene load_steps=12 format=3 uid="uid://ch5oceigyukj4"]

[ext_resource type="Script" path="res://src/interfaces/ui/menu/pause_menu/pause_menu.gd" id="1_l8sqn"]
[ext_resource type="Shader" path="res://assets/shaders/blur.gdshader" id="1_vypus"]
[ext_resource type="Theme" uid="uid://d2cbr03j2h6j8" path="res://src/interfaces/assets/styles/popup_theme.tres" id="2_4r0ak"]
[ext_resource type="Script" path="res://src/utils/button_scene.gd" id="4_gtebq"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_rhgav"]
shader = ExtResource("1_vypus")
shader_parameter/amount = 2.0

[sub_resource type="Gradient" id="Gradient_3bcip"]
offsets = PackedFloat32Array(0)
colors = PackedColorArray(0.164706, 0.207843, 0.254902, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_3y1yx"]
gradient = SubResource("Gradient_3bcip")

[sub_resource type="Animation" id="Animation_8p4wi"]
resource_name = "bounce_down"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.3, 0.9),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Background:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(1, 1), Vector2(0.2, 0.2)]
}

[sub_resource type="Animation" id="Animation_v47d5"]
resource_name = "bounce_up"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = false
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.8, 1),
"transitions": PackedFloat32Array(-2, -2, -2),
"update": 0,
"values": [Vector2(735, -290), Vector2(735, 310), Vector2(735, 290)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../Background:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(-2, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 0.8),
"transitions": PackedFloat32Array(-2, -2),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.8),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.2, 0.2), Vector2(1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lb4xf"]
_data = {
"bounce_down": SubResource("Animation_8p4wi"),
"bounce_up": SubResource("Animation_v47d5")
}

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c33cp"]

[node name="PauseMenu" type="Control"]
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_l8sqn")

[node name="Background" type="TextureRect" parent="."]
material = SubResource("ShaderMaterial_rhgav")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
texture = SubResource("GradientTexture1D_3y1yx")

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.395833
anchor_top = 0.268519
anchor_right = 0.604167
anchor_bottom = 0.731481
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(200, 250)
theme = ExtResource("2_4r0ak")

[node name="AnimationPlayer" type="AnimationPlayer" parent="Panel"]
reset_on_save = false
libraries = {
"": SubResource("AnimationLibrary_lb4xf")
}

[node name="VBC" type="VBoxContainer" parent="Panel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Top" type="MarginContainer" parent="Panel/VBC"]
layout_mode = 2
size_flags_vertical = 3
theme_override_constants/margin_top = 25

[node name="Title" type="Label" parent="Panel/VBC/Top"]
layout_mode = 2
theme_override_font_sizes/font_size = 42
text = "GAME PAUSE"
horizontal_alignment = 1

[node name="Middle" type="MarginContainer" parent="Panel/VBC"]
layout_mode = 2
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0
theme_override_constants/margin_left = 25
theme_override_constants/margin_top = 25
theme_override_constants/margin_right = 25
theme_override_constants/margin_bottom = 25

[node name="VBC" type="VBoxContainer" parent="Panel/VBC/Middle"]
layout_mode = 2
size_flags_vertical = 4
theme_override_constants/separation = 25

[node name="Resume" type="Button" parent="Panel/VBC/Middle/VBC"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
size_flags_horizontal = 3
focus_previous = NodePath(".")
theme_override_font_sizes/font_size = 28
text = "RESUME"

[node name="Settings" type="Button" parent="Panel/VBC/Middle/VBC"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "SETTINGS"
script = ExtResource("4_gtebq")
scene = "settings_menu"
color = Color(0.164706, 0.207843, 0.254902, 1)
clickable = true
fade_out_speed = 0.5
fade_in_speed = 2.0

[node name="HSeparator" type="HSeparator" parent="Panel/VBC/Middle/VBC"]
layout_mode = 2
theme_override_constants/separation = 0
theme_override_styles/separator = SubResource("StyleBoxEmpty_c33cp")

[node name="MainMenu" type="Button" parent="Panel/VBC/Middle/VBC"]
custom_minimum_size = Vector2(0, 70)
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "MAIN MENU"
script = ExtResource("4_gtebq")
scene = "main_menu"
color = Color(0.164706, 0.207843, 0.254902, 1)
clickable = true
add_to_back = false
fade_out_speed = 0.5
fade_in_speed = 2.0

[connection signal="animation_finished" from="Panel/AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="button_up" from="Panel/VBC/Middle/VBC/Resume" to="." method="_on_resume_button_up"]
[connection signal="button_down" from="Panel/VBC/Middle/VBC/Settings" to="." method="_on_main_menu_button_down"]
[connection signal="button_up" from="Panel/VBC/Middle/VBC/Settings" to="Panel/VBC/Middle/VBC/Settings" method="_on_button_button_up"]
[connection signal="button_down" from="Panel/VBC/Middle/VBC/MainMenu" to="." method="_on_main_menu_button_down"]
[connection signal="button_up" from="Panel/VBC/Middle/VBC/MainMenu" to="Panel/VBC/Middle/VBC/MainMenu" method="_on_button_button_up"]
